--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,14 @@ upload.path=/home/denis/uploads
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=denis11032001@gmail.com
+spring.mail.host=smtp.rambler.ru
+spring.mail.username=hollowphantom@rambler.ru
 spring.mail.password=Pkm562657514883
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=false
+mail.debug=true
 
 recaptcha.secret=6LdxBKgZAAAAAAhVatkGsrLn1BkEBXSPK7NjA5Bf
 
